# Meeting-Notes-Opus4.6-Showcase

./: .gitignore  README.md  pyproject.toml
actionize/: __init__.py  __main__.py  formatter.py  parser.py
examples/: meeting_notes.txt
tests/: conftest.py  test_cli.py  test_formatter.py  test_parser.py
